v1.0.0/modules/schema/pages/class/WindDynamicsLookupTable.adoc
= `WindDynamicsLookupTable`
:toclevels: 4


+++Look up table for the purpose of wind standard models.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindDynamicsLookupTable`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`WindDynamicsLookupTable`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
WindDynamicsLookupTable {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindPlantFreqPcontrolIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindPlantReactiveControlIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindProtectionIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContQPQULimIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContCurrLimIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContPType3IEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContRotorRIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindPitchContPowerIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindGenType3bIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




WindDynamicsLookupTable -> WindPlantFreqPcontrolIEC: WindPlantFreqPcontrolIEC


WindDynamicsLookupTable -> WindPlantReactiveControlIEC: WindPlantReactiveControlIEC


WindDynamicsLookupTable -> WindProtectionIEC: WindProtectionIEC


WindDynamicsLookupTable -> WindContQPQULimIEC: WindContQPQULimIEC


WindDynamicsLookupTable -> WindContCurrLimIEC: WindContCurrLimIEC


WindDynamicsLookupTable -> WindContPType3IEC: WindContPType3IEC


WindDynamicsLookupTable -> WindContRotorRIEC: WindContRotorRIEC


WindDynamicsLookupTable -> WindPitchContPowerIEC: WindPitchContPowerIEC


WindDynamicsLookupTable -> WindGenType3bIEC: WindGenType3bIEC


WindDynamicsLookupTable -> DiagramObject: DiagramObjects


WindDynamicsLookupTable -> InstanceSet: InstanceSet


WindDynamicsLookupTable -> Name: Names


WindDynamicsLookupTable -> ChangeSetMember: PropertiesCIMDataObject


WindDynamicsLookupTable -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<WindContCurrLimIEC,`WindContCurrLimIEC`>>
| 0..1
| xref::class/WindContCurrLimIEC.adoc[`WindContCurrLimIEC`]
| +++The current control limitation model with which this wind dynamics lookup table is associated.+++

| <<WindContPType3IEC,`WindContPType3IEC`>>
| 0..1
| xref::class/WindContPType3IEC.adoc[`WindContPType3IEC`]
| +++The P control type 3 model with which this wind dynamics lookup table is associated.+++

| <<WindContQPQULimIEC,`WindContQPQULimIEC`>>
| 0..1
| xref::class/WindContQPQULimIEC.adoc[`WindContQPQULimIEC`]
| +++The QP and QU limitation model with which this wind dynamics lookup table is associated.+++

| <<WindContRotorRIEC,`WindContRotorRIEC`>>
| 0..1
| xref::class/WindContRotorRIEC.adoc[`WindContRotorRIEC`]
| +++The rotor resistance control model with which this wind dynamics lookup table is associated.+++

| <<WindGenType3bIEC,`WindGenType3bIEC`>>
| 0..1
| xref::class/WindGenType3bIEC.adoc[`WindGenType3bIEC`]
| +++The generator type 3B model with which this wind dynamics lookup table is associated.+++

| <<WindPitchContPowerIEC,`WindPitchContPowerIEC`>>
| 0..1
| xref::class/WindPitchContPowerIEC.adoc[`WindPitchContPowerIEC`]
| +++The pitch control power model with which this wind dynamics lookup table is associated.+++

| <<WindPlantFreqPcontrolIEC,`WindPlantFreqPcontrolIEC`>>
| 0..1
| xref::class/WindPlantFreqPcontrolIEC.adoc[`WindPlantFreqPcontrolIEC`]
| +++The frequency and active power wind plant control model with which this wind dynamics lookup table is associated.+++

| <<WindPlantReactiveControlIEC,`WindPlantReactiveControlIEC`>>
| 0..1
| xref::class/WindPlantReactiveControlIEC.adoc[`WindPlantReactiveControlIEC`]
| +++The voltage and reactive power wind plant control model with which this wind dynamics lookup table is associated.+++

| <<WindProtectionIEC,`WindProtectionIEC`>>
| 0..1
| xref::class/WindProtectionIEC.adoc[`WindProtectionIEC`]
| +++The grid protection model with which this wind dynamics lookup table is associated.+++

| <<input,`input`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Input value (<i>x</i>) for the lookup table function.+++

| <<lookupTableFunctionType,`lookupTableFunctionType`>>
| 0..1
| xref::enumeration/WindLookupTableFunctionKind.adoc[`WindLookupTableFunctionKind`]
| +++Type of the lookup table function.+++

| <<output,`output`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Output value (<i>y</i>) for the lookup table function.+++

| <<sequence,`sequence`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Sequence numbers of the pairs of the input (<i>x</i>) and the output (<i>y</i>) of the lookup table function.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#input]
=== `input`
+++Input value (<i>x</i>) for the lookup table function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.input`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#lookupTableFunctionType]
=== `lookupTableFunctionType`
+++Type of the lookup table function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.lookupTableFunctionType`
| Cardinality
| 0..1
| Type
| xref::enumeration/WindLookupTableFunctionKind.adoc[`WindLookupTableFunctionKind`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#output]
=== `output`
+++Output value (<i>y</i>) for the lookup table function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.output`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#sequence]
=== `sequence`
+++Sequence numbers of the pairs of the input (<i>x</i>) and the output (<i>y</i>) of the lookup table function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.sequence`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#WindContCurrLimIEC]
=== `WindContCurrLimIEC`
+++The current control limitation model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindContCurrLimIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindContCurrLimIEC.adoc[`WindContCurrLimIEC`]


|===

//[discrete]
[#WindContPType3IEC]
=== `WindContPType3IEC`
+++The P control type 3 model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindContPType3IEC`
| Cardinality
| 0..1
| Type
| xref::class/WindContPType3IEC.adoc[`WindContPType3IEC`]


|===

//[discrete]
[#WindContQPQULimIEC]
=== `WindContQPQULimIEC`
+++The QP and QU limitation model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindContQPQULimIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindContQPQULimIEC.adoc[`WindContQPQULimIEC`]


|===

//[discrete]
[#WindContRotorRIEC]
=== `WindContRotorRIEC`
+++The rotor resistance control model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindContRotorRIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindContRotorRIEC.adoc[`WindContRotorRIEC`]


|===

//[discrete]
[#WindGenType3bIEC]
=== `WindGenType3bIEC`
+++The generator type 3B model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindGenType3bIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindGenType3bIEC.adoc[`WindGenType3bIEC`]


|===

//[discrete]
[#WindPitchContPowerIEC]
=== `WindPitchContPowerIEC`
+++The pitch control power model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindPitchContPowerIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindPitchContPowerIEC.adoc[`WindPitchContPowerIEC`]


|===

//[discrete]
[#WindPlantFreqPcontrolIEC]
=== `WindPlantFreqPcontrolIEC`
+++The frequency and active power wind plant control model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindPlantFreqPcontrolIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindPlantFreqPcontrolIEC.adoc[`WindPlantFreqPcontrolIEC`]


|===

//[discrete]
[#WindPlantReactiveControlIEC]
=== `WindPlantReactiveControlIEC`
+++The voltage and reactive power wind plant control model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindPlantReactiveControlIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindPlantReactiveControlIEC.adoc[`WindPlantReactiveControlIEC`]


|===

//[discrete]
[#WindProtectionIEC]
=== `WindProtectionIEC`
+++The grid protection model with which this wind dynamics lookup table is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindDynamicsLookupTable.WindProtectionIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindProtectionIEC.adoc[`WindProtectionIEC`]


|===


